SCRUM-74 changed method